relatorios/202211686/T6/cppcheck.txt
t6-AntonioDallAgnol.cpp:0:0: information: Too many #ifdef configurations - cppcheck only checks 12 of 106 configurations. Use --force to check all configurations. [toomanyconfigs]

^
catch2.hpp:2698:0: error: failed to expand 'REQUIRE', Invalid ## usage when expanding 'INTERNAL_CATCH_TEST'. [preprocessorErrorDirective]
#define INTERNAL_CATCH_TEST( macroName, resultDisposition, ... ) \
^
catch2.hpp:17452:30: error: syntax error: =[...]; [syntaxError]
    NSAutoreleasePool * pool = [[NSAutoreleasePool alloc] init];
                             ^
catch2.hpp:8847:9: style: Class 'Args' has a constructor with 1 argument that is not explicit. [noExplicitConstructor]
        Args( std::initializer_list<std::string> args )
        ^
catch2.hpp:9489:9: style: Struct 'Help' has a constructor with 1 argument that is not explicit. [noExplicitConstructor]
        Help( bool &showHelpFlag )
        ^
catch2.hpp:9136:22: style: The function 'isFlag' overrides a function in a base class but is not marked with a 'override' specifier. [missingOverride]
        virtual auto isFlag() const -> bool { return true; }
                     ^
catch2.hpp:9129:22: note: Virtual function in base class
        virtual auto isFlag() const -> bool { return false; }
                     ^
catch2.hpp:9136:22: note: Function in derived class
        virtual auto isFlag() const -> bool { return true; }
                     ^
catch2.hpp:8542:9: style: Local variable 'width' shadows outer function [shadowFunction]
   auto width = m_column.m_width - indent();
        ^
catch2.hpp:8634:7: note: Shadowed declaration
 auto width(size_t newWidth) -> Column& {
      ^
catch2.hpp:8542:9: note: Shadow variable
   auto width = m_column.m_width - indent();
        ^
catch2.hpp:8700:17: style: Consider using std::transform algorithm instead of a raw loop. [useStlAlgorithm]
    m_iterators.push_back(col.end());
                ^
catch2.hpp:8716:17: style: Consider using std::transform algorithm instead of a raw loop. [useStlAlgorithm]
    m_iterators.push_back(col.begin());
                ^
catch2.hpp:9426:0: style: Consider using std::any_of algorithm instead of a raw loop. [useStlAlgorithm]
                if( normaliseOpt( name ) == normalisedToken )
^
catch2.hpp:9577:26: style: Consider using std::accumulate algorithm instead of a raw loop. [useStlAlgorithm]
                optWidth = (std::max)(optWidth, cols.left.size() + 2);
                         ^
catch2.hpp:7834:24: style: Local variable 'outlier_variance' shadows outer function [shadowFunction]
                double outlier_variance = Detail::outlier_variance(mean_estimate, stddev_estimate, n);
                       ^
catch2.hpp:7770:20: note: Shadowed declaration
            double outlier_variance(Estimate<double> mean, Estimate<double> stddev, int n) {
                   ^
catch2.hpp:7834:24: note: Shadow variable
                double outlier_variance = Detail::outlier_variance(mean_estimate, stddev_estimate, n);
                       ^
